kubernetes/healthvue-server/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthvue-server
  namespace: healthvue

spec:
  ports:
    - name: web
      port: 80
      targetPort: web
  selector:
    app: healthvue-server
