kubernetes/healthvue-server/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-healthvue-server
  namespace: healthvue
spec:
  stripPrefix:
    prefixes:
      - "/healthvue-server"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-healthvue-server
  namespace: healthvue

spec:
  entryPoints:
    - web

  routes:
    - match: PathPrefix(`/healthvue-server`)
      kind: Rule
      services:
        - name: healthvue-server
          port: 80
      middlewares:
        - name: stripprefix-healthvue-server
